subjectmicroservice/subjectmicroservice/withouthelm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subjectmicroservice
  labels:
    app: subjectmicroservice
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: subjectmicroservice
