subjectmicroservice/subjectmicroservice/withouthelm/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: subjectmicroservice
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /subject
        backend:
          serviceName: subjectmicroservice
          servicePort: 80
